﻿2006-12-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* configure.ac, data/graphics/items/Makefile.am,
	data/graphics/items/CMakeLists.txt, data/graphics/images/Makefile.am,
	data/graphics/images/CMakeLists.txt,
	data/graphics/sprites/Makefile.am,
	data/graphics/sprites/CMakeLists.txt, data/graphics/Makefile.am,
	data/graphics/CMakeLists.txt, data/maps/Makefile.am,
	data/maps/CMakeLists.txt, data/sfx/Makefile.am,
	data/sfx/CMakeLists.txt, data/Makefile.am, data/CMakeLists.txt:
	Removed database files, minimaps, items, monster sprites, maps and
	sounds from the release. They will be released dynamically only.
	* data/graphics/tiles/snow_x3.png: Added bottom of Christmas tree by
	pauan.
	* src/main.cpp, src/resources/itemdb.h, src/resources/monsterdb.cpp,
	src/resources/itemdb.cpp, src/resources/equipmentdb.cpp: Load the
	databases at the start of the LOGIN state, after the updates are
	loaded.

2006-12-22  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/items/armor-head-rangerhat.png,
	data/graphics/items/generic-redstocking.png,
	data/graphics/items/armor-head-christmastree.png,
	data/graphics/items/armor-head-antlerhat.png,
	data/graphics/items/armor-head-santabeardhat.png,
	data/graphics/sprites/head-christmastreehat.png,
	data/graphics/sprites/head-rangerhat.png,
	data/graphics/sprites/head-christmastree.xml,
	data/graphics/sprites/head-antlerhat.xml,
	data/graphics/sprites/head-santabeardhat.xml,
	data/graphics/sprites/head-antlerhat.png,
	data/graphics/sprites/head-santabeardhat.png,
	data/graphics/sprites/head-rangerhat.xml, data/items.xml,
	data/equipment.xml, data/monsters.xml: Added new Christmas themed
	headwear by Pauan.
	* data/graphics/items/Makefile.am, data/graphics/items/CMakeLists.txt,
	data/graphics/sprites/Makefile.am,
	data/graphics/sprites/CMakeLists.txt, data/Makefile.am,
	data/CMakeLists.txt: Updated Makefiles.

2006-12-21  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* configure.ac, CMakeLists.txt, README, data/help/header.txt: Updated